--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
-                android:text="This text's fontfamilt is default"
+                android:text="This text's fontfamily is default"
                 android:textSize="20sp"
                 android:textColor="@android:color/black"/>
 
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
-                android:text="This text's fontfamilt is sans-serif"
+                android:text="This text's fontfamily is sans-serif"
                 android:textSize="20sp"
                 android:textColor="@android:color/black"
                 android:fontFamily="sans-serif"/>
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
-                android:text="This text's fontfamilt is sans-serif"
+                android:text="This text's fontfamily is sans-serif"
                 android:textSize="20sp"
                 android:textColor="@android:color/black"/>
 
@@ -61,7 +61,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginTop="24dp"
-                android:text="This text's fontfamilt is sans-serif-medium"
+                android:text="This text's fontfamily is sans-serif-medium"
                 android:textSize="20sp"
                 android:textColor="@android:color/black"
                 android:fontFamily="sans-serif-medium"/>
@@ -72,7 +72,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginTop="24dp"
-                android:text="This text's fontfamilt is sans-serif-medium"
+                android:text="This text's fontfamily is sans-serif-medium"
                 android:textSize="20sp"
                 android:textColor="@android:color/black"
                 android:fontFamily="sans-serif-medium"/>
